Feat: integrated access token
